Expanding BenchmarkingRunArguments to take input WorkerAllocation as a class object